--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,9 +5,9 @@ name: .NET
 
 on:
   push:
-    branches: [ "main", "feature/*", "bugfix/*" ]
+    branches: [ "main", "feature/*", "bugfix/*", "refactor/*" ]
   pull_request:
-    branches: [ "main", "feature/*", "bugfix/*" ]
+    branches: [ "main", "feature/*", "bugfix/*", "refactor/*" ]
 
 jobs:
   build:
