--- a/.github/workflows/branch-name-check-pullrequest.yml
+++ b/.github/workflows/branch-name-check-pullrequest.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Check Branch Name Format
         run: |
           branch_name=${GITHUB_HEAD_REF}
-          if [[ ! "$branch_name" =~ ^(feature|bugfix)/[0-9]+-.* ]]; then
+          if [[ ! "$branch_name" =~ ^(feature|bugfix|refactor)/[0-9]+-.* ]]; then
             echo "Error: Branch name '$branch_name' does not follow the 'feature/0000-feature-name' or 'bugfix/0000-bugfix-name' format (where 0000 is the Issue Id)."
             exit 1
           fi
