implement CommandLineParser, rename Code folder to App

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             "cwd": "${workspaceFolder}/ThreeXPlusOne/bin/Debug/net8.0",
+            "args": [
+                "",
+            ],
         }
     ]
 }
