--- a/.github/workflows/create-tag-pullrequest-close.yaml
+++ b/.github/workflows/create-tag-pullrequest-close.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types: [closed]
 
+permissions:
+  contents: write
+
 jobs:
   tag-version:
     if: github.event.pull_request.merged == true
