--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,8 +11,13 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
+    # Condition to prevent running on push if there's an open PR for the branch
+    if: >
+      github.event_name != 'push' ||
+      github.event_name == 'push' && 
+      !contains(github.event.ref, 'refs/pull/')
 
     steps:
     - uses: actions/checkout@v3
