--- a/ThreeXPlusOne/ThreeXPlusOne.csproj
+++ b/ThreeXPlusOne/ThreeXPlusOne.csproj
@@ -5,7 +5,7 @@
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(Version)</FileVersion>
     <AssemblyInformationalVersion>$(Version)</AssemblyInformationalVersion>
-    <TagMessage>Reduce number of builds in GitHub</TagMessage>
+    <TagMessage>Reduce number of builds in GitHub Workflow</TagMessage>
   </PropertyGroup>
 
   <PropertyGroup>
