--- a/ThreeXPlusOne/ThreeXPlusOne.csproj
+++ b/ThreeXPlusOne/ThreeXPlusOne.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.3.0</Version>
+    <Version>1.3.1</Version>
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(Version)</FileVersion>
     <AssemblyInformationalVersion>$(Version)</AssemblyInformationalVersion>
-    <TagMessage>User-defined node colours</TagMessage>
+    <TagMessage>Rename settings to appSettings</TagMessage>
   </PropertyGroup>
 
   <PropertyGroup>
