--- a/ThreeXPlusOne/ThreeXPlusOne.csproj
+++ b/ThreeXPlusOne/ThreeXPlusOne.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.7.6</Version>
+    <Version>1.8.0</Version>
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(Version)</FileVersion>
     <AssemblyInformationalVersion>$(Version)</AssemblyInformationalVersion>
-    <TagMessage>Rename skew methods</TagMessage>
+    <TagMessage>Add trapezoid, and permutations of 4-sided polygon (Square, Rhombus, Rectangle, Parallelogram)</TagMessage>
   </PropertyGroup>
 
   <PropertyGroup>
