--- a/ThreeXPlusOne/ThreeXPlusOne.csproj
+++ b/ThreeXPlusOne/ThreeXPlusOne.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.8.2</Version>
+    <Version>1.8.3</Version>
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(Version)</FileVersion>
     <AssemblyInformationalVersion>$(Version)</AssemblyInformationalVersion>
-    <TagMessage>Weighted random selection to account for more polygon shapes varieties</TagMessage>
+    <TagMessage>Refactor shape weighting code and apply to user-supplied shape list</TagMessage>
   </PropertyGroup>
 
   <PropertyGroup>
