better handling of graph instance-specific data and settings

--- a/ThreeXPlusOne/ThreeXPlusOne.csproj
+++ b/ThreeXPlusOne/ThreeXPlusOne.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>2.6.2</Version>
+    <Version>2.6.3</Version>
     <AssemblyVersion>$(Version)</AssemblyVersion>
     <FileVersion>$(Version)</FileVersion>
     <AssemblyInformationalVersion>$(Version)</AssemblyInformationalVersion>
-    <TagMessage>Switch back to linear decay function for light source impact</TagMessage>
+    <TagMessage>Handle graph instance-specific settings</TagMessage>
   </PropertyGroup>
 
   <PropertyGroup>
